--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -340,7 +340,7 @@
     </header>
     <div class="breadcrumbs">
         <ul>
-          <li><a href="{{ url_for('select_view') }}">TOP</a></li>
+          <li><a href="{{ url_for('dashboard') }}">TOP</a></li>
           <li><a href="{{ url_for('dashboard') }}">Home</a></li>
           <li>{{ article.generatedTitle | truncate(30) }}</li>
         </ul>
