dashboardなどのデザイン変更と検索機能の調整

--- a/templates/login.html
+++ b/templates/login.html
@@ -618,11 +618,10 @@
             <div class="feature-item">
                 <div class="number">01</div>
                 <img src="{{ url_for('static', filename='img/log.png') }}" alt="ログアイコン" class="log_icon">
-                <h3>埋もれる履歴</h3>
+                <h3>大量の閲覧履歴</h3>
                 <p>
-                    膨大な履歴の中から<br>
-                    重要な技術情報だけを見つけ出すのは<br>
-                    困難です。
+                    1日の閲覧履歴が多すぎて情報を<br>
+                    どこで見たのかわからない
                 </p>
             </div>
 
@@ -636,11 +635,10 @@
             <div class="feature-item">
                 <div class="number">02</div>
                 <img src="{{ url_for('static', filename='img/robot.png') }}" alt="AIアイコン" class="filter_icon">
-                <h3>AIによる自動整理</h3>
+                <h3>AIが履歴の整理をする</h3>
                 <p>
-                    高度なフィルタリングと要約機能で<br>
-                    あなたにとって本当に必要な情報だけを<br>
-                    抽出します。
+                    フィルタリングと要約で<br>
+                    必要な情報のみに整理する
                 </p>
             </div>
 
@@ -654,18 +652,17 @@
             <div class="feature-item">
                 <div class="number">03</div>
                 <img src="{{ url_for('static', filename='img/pen.png') }}" alt="ペンアイコン" class="pen_icon">
-                <h3>知識の定着</h3>
+                <h3>簡単に振り返る</h3>
                 <p>
-                    要約された情報を振り返り、<br>
-                    コメントを残すことで<br>
-                    一過性の情報を知識として定着させます。
+                    それぞれのサイトを振り返り、<br>
+                    知識として定着させる
                 </p>
             </div>
         </section>
     </div>
 
     <div id="start">
-        <h2>How to Use</h2>
+        <h2>使い方</h2>
         <div class="start_steps_container">
             <div class="step_item">
                 <div class="step_header">
@@ -673,7 +670,7 @@
                         <span>STEP</span>
                         <span>01</span>
                     </div>
-                    <span class="step_title">Chromeストアで追加</span>
+                    <span class="step_title">初期準備</span>
                 </div>
                 <div class="step_images_wrapper">
                     <img src="{{ url_for('static', filename='img/use1.png') }}" alt="使い方1" class="step_image">
@@ -686,7 +683,8 @@
                         <span>STEP</span>
                         <span>02</span>
                     </div>
-                    <span class="step_title">拡張機能を有効化</span>
+                    <span class="step_title">履歴の取得とAIによる解析
+                    </span>
                 </div>
                 <div class="step_images_wrapper">
                     <img src="{{ url_for('static', filename='img/use3.png') }}" alt="使い方3" class="step_image">
@@ -699,7 +697,7 @@
                         <span>STEP</span>
                         <span>03</span>
                     </div>
-                    <span class="step_title">学びを振り返る</span>
+                    <span class="step_title">振り返りと見返し</span>
                 </div>
                 <div class="step_images_wrapper">
                     <img src="{{ url_for('static', filename='img/refrect.png') }}" alt="振り返り" class="step_image">
